V0.0.6 (2016-10-xx):
====================

* New features:
  * Added "LogAtom" and "AtomHandlerInterface" to pass data from
    IO-layer to upper layers consistently.
  * Added TimestampsUnsortedDetector.py to fail (exit) when data
    is not properly sorted.
* Bugfixes:
  * Logic flaw in logfile rollover handling, selecting on bad fd.
  * Unassigned, reused variable caused same logfile to be opened
    more than once.

V0.0.5 (2016-10-11):
====================

* New features:
  * Added helper class for parser matching process debugging.
  * Added interface to ease detector state updates after triggering
    an event.
  * Added minimal model for parsing Tomcat start/stop syslog messages.
  * Added support for logfile reading continuation after shutdown,
    alternative lowlevel data stream splitting tools (atomizers).
* Bugfixes:
  * Fixed file descriptor leak in PersistencyUtil.py on store

V0.0.4 (2016-08-26):
====================

* New features:
  * NewMatchPathValueComboDetector: Detect new combination of
    values for list of data pathes, e.g. for link analysis.
  * ParsedAtomFilterMatchAction: Forward data to specific handlers
    when rules match.
  * VolatileLogarithmicBackoffEventHistory: Added unique EventId
  * Pass event source reference to event handlers to allow query/change
    of source parameters when handling the event.
  * Generic logdata parsing model improvements
  * Added new rule types: ValueDependentDelegatedMatchRule and
    ValueDependentModuloTimeMatchRule
* Bugfixes:
  * Packaging: unowned directory after purge, see
    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=832347
  * DefaultMailNotificationEventHandler: cleanup of old sendmail
    process instances not working
  * EventGenerationMatchAction: wrong method name, class field access


V0.0.3 (2016-07-21):
====================

* Backport of changes from Debian ITP process review, see
  https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=813096